# serializer version: 1
# name: test_setup[no_data][number.pro_05_alarm_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_alarm_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Alarm interval',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_interval',
    'unique_id': '00000000-0000-0000-0000-000000000001_alarm_interval',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_setup[no_data][number.pro_05_alarm_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Alarm interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_alarm_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_setup[no_data][number.probe_1_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_1_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[no_data][number.probe_1_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_1_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[no_data][number.probe_1_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_1_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[no_data][number.probe_2_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_2_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[no_data][number.probe_2_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_2_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[no_data][number.probe_2_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[no_data][number.probe_2_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.pro_05_alarm_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_alarm_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Alarm interval',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_interval',
    'unique_id': '00000000-0000-0000-0000-000000000001_alarm_interval',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.pro_05_alarm_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Alarm interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_alarm_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_1_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.0',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup[one_probe_with_target_alarm][number.probe_2_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_alarm_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_alarm_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Alarm interval',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_interval',
    'unique_id': '00000000-0000-0000-0000-000000000001_alarm_interval',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_alarm_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Alarm interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_alarm_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_ambient_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Ambient maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_maximum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_ambient_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '300.0',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_ambient_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Ambient minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_minimum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.pro_05_ambient_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_1_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_with_range][number.probe_2_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_alarm_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_alarm_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Alarm interval',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_interval',
    'unique_id': '00000000-0000-0000-0000-000000000001_alarm_interval',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_alarm_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Alarm interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_alarm_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_ambient_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Ambient maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_maximum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_ambient_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_ambient_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Ambient minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_minimum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.pro_05_ambient_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_1_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[ambient_wrong_alarm_type][number.probe_2_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_alarm_interval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_alarm_interval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Alarm interval',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Alarm interval',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'alarm_interval',
    'unique_id': '00000000-0000-0000-0000-000000000001_alarm_interval',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_alarm_interval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Alarm interval',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 15,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_alarm_interval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_ambient_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Ambient maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_maximum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_ambient_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_ambient_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambient minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Ambient minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ambient_temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_ambient_temperature_minimum',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.pro_05_ambient_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pro-05 Ambient minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 400,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.pro_05_ambient_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_1_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_1',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_1_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_1_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_maximum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_maximum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-up',
    'original_name': 'Maximum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_maximum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_maximum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_maximum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Maximum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_maximum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_minimum_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_minimum_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-chevron-down',
    'original_name': 'Minimum temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_minimum',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_minimum_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_minimum_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Minimum temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_minimum_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.probe_2_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Target temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:thermometer-check',
    'original_name': 'Target temperature',
    'platform': 'togrill',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'temperature_target',
    'unique_id': '00000000-0000-0000-0000-000000000001_temperature_target_2',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_setup_with_ambient[no_data][number.probe_2_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Probe 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-check',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 250,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.BOX: 'box'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1.0,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.probe_2_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
